// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PickupOrDeliveryDropdown stories snapshot > CustomClass story renders and matches snapshot 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  class="mb-1 w-fit px-2 border-0 bg-muted text-xs font-medium text-foreground flex items-center justify-center gap-1 hover:bg-accent transition-colors"
  data-slot="dropdown-menu-trigger"
  data-state="closed"
  id="radix-_r_4_"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-shopping-cart size-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="21"
      r="1"
    />
    <circle
      cx="19"
      cy="21"
      r="1"
    />
    <path
      d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
    />
  </svg>
  <span>
    Delivery
  </span>
</button>
`;

exports[`PickupOrDeliveryDropdown stories snapshot > Default story renders and matches snapshot 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  class="mb-1 w-fit px-2 border-0 bg-muted text-xs font-medium text-foreground flex items-center justify-center gap-1 hover:bg-accent transition-colors"
  data-slot="dropdown-menu-trigger"
  data-state="closed"
  id="radix-_r_0_"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-shopping-cart size-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="8"
      cy="21"
      r="1"
    />
    <circle
      cx="19"
      cy="21"
      r="1"
    />
    <path
      d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
    />
  </svg>
  <span>
    Delivery
  </span>
</button>
`;

exports[`PickupOrDeliveryDropdown stories snapshot > PickupSelected story renders and matches snapshot 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  class="mb-1 w-fit px-2 border-0 bg-muted text-xs font-medium text-foreground flex items-center justify-center gap-1 hover:bg-accent transition-colors"
  data-slot="dropdown-menu-trigger"
  data-state="closed"
  id="radix-_r_2_"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-store size-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-5a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v5"
    />
    <path
      d="M17.774 10.31a1.12 1.12 0 0 0-1.549 0 2.5 2.5 0 0 1-3.451 0 1.12 1.12 0 0 0-1.548 0 2.5 2.5 0 0 1-3.452 0 1.12 1.12 0 0 0-1.549 0 2.5 2.5 0 0 1-3.77-3.248l2.889-4.184A2 2 0 0 1 7 2h10a2 2 0 0 1 1.653.873l2.895 4.192a2.5 2.5 0 0 1-3.774 3.244"
    />
    <path
      d="M4 10.95V19a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8.05"
    />
  </svg>
  <span>
    Pick Up
  </span>
</button>
`;
